--- a/savis4/Savis4/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/savis4/Savis4/src/app/components/forgotpassword/forgotpassword.component.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="panel border bg-white">
                 <p class="text-center">Select language</p>
-                        <p class="text-center">Seleccione el idioma</p>
+                        <p class="text-center">Seleccionar idioma</p>
                 <app-language-switcher class="language"></app-language-switcher>
                 <h3 class="panel-heading pt-3">{{"ForgotPassword" | translate}}</h3>
 
