copyright details now static on all features and homepage

--- a/savis4/Savis4/src/app/features/bar-chart/bar-chart.component.html
+++ b/savis4/Savis4/src/app/features/bar-chart/bar-chart.component.html
@@ -74,4 +74,6 @@
         </div>
     </div>
 </div>
-<app-footer></app-footer>
+<footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+  </footer>
