--- a/savis4/Savis4/src/app/features/correlation/correlation.component.html
+++ b/savis4/Savis4/src/app/features/correlation/correlation.component.html
@@ -10,4 +10,6 @@
     [valuesCheck]="valuesCheck"
   ></app-chart> -->
 </div>
-<app-footer class="inset-x-0 bottom-0"></app-footer>
+<footer class="static-footer">
+  {{ "nav_copyright" | translate }}
+</footer>
