--- a/savis4/Savis4/src/app/features/dot-chart/dot-chart.component.html
+++ b/savis4/Savis4/src/app/features/dot-chart/dot-chart.component.html
@@ -144,5 +144,6 @@
         </div>
     </div>
 </div>
-<app-footer class="mt-auto"></app-footer>
-</body>
+<footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+  </footer>
