--- a/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
+++ b/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
@@ -187,6 +187,8 @@
         </div>
     </div>
  </div>
-<app-footer class="mt-auto"></app-footer>
+ <footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+  </footer>
 </body>
 
