--- a/savis4/Savis4/src/app/features/one-mean/one-mean.component.html
+++ b/savis4/Savis4/src/app/features/one-mean/one-mean.component.html
@@ -144,5 +144,7 @@
         </div>
     </div>
 </div>
-<app-footer class="mt-auto"></app-footer>
+<footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+  </footer>
 </body>
