--- a/savis4/Savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/Savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -174,4 +174,6 @@
     </div>
 </div>
 
-<app-footer></app-footer>
+<footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+  </footer>
