--- a/savis4/Savis4/src/app/features/two-means-ci/two-means-ci.component.html
+++ b/savis4/Savis4/src/app/features/two-means-ci/two-means-ci.component.html
@@ -196,4 +196,6 @@
     </div>
   </div>
 </div>
-<app-footer></app-footer>
+<footer class="static-footer">
+  {{ "nav_copyright" | translate }}
+</footer>
