--- a/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.html
+++ b/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.html
@@ -158,5 +158,7 @@
   </div>
 </div>
 
-<app-footer></app-footer>
+<footer class="static-footer">
+  {{ "nav_copyright" | translate }}
+</footer>
 <!-- export NODE_OPTIONS=--openssl-legacy-provider -->
