--- a/savis4/Savis4/src/app/components/homepage/homepage.component.scss
+++ b/savis4/Savis4/src/app/components/homepage/homepage.component.scss
@@ -116,3 +116,13 @@ footer{
     padding-top: 19%;
     text-align: center;
 }
+
+.static-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000; 
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0; 
+  }
