--- a/savis4/Savis4/src/app/features/bar-chart/bar-chart.component.scss
+++ b/savis4/Savis4/src/app/features/bar-chart/bar-chart.component.scss
@@ -122,3 +122,13 @@ input[type="number"] {
   height:4px;
   background-color: green;
 }
+
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
