--- a/savis4/Savis4/src/app/features/correlation/correlation.component.scss
+++ b/savis4/Savis4/src/app/features/correlation/correlation.component.scss
@@ -1,1 +1,10 @@
 
+.static-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000; 
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0; 
+  }
