--- a/savis4/Savis4/src/app/features/dot-chart/dot-chart.component.scss
+++ b/savis4/Savis4/src/app/features/dot-chart/dot-chart.component.scss
@@ -121,3 +121,13 @@ input[type="checkbox"] {
   width: 100%;
   cursor: default;
 }
+
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
