--- a/savis4/Savis4/src/app/features/linear-regression/linear-regression.component.html
+++ b/savis4/Savis4/src/app/features/linear-regression/linear-regression.component.html
@@ -48,4 +48,6 @@
   </div>
 
   <!-- footer -->
-  <app-footer class="fixed inset-x-0 bottom-0"></app-footer>
+  <footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+  </footer>
