--- a/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
+++ b/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
@@ -346,3 +346,12 @@ input[type="checkbox"] {
   cursor: default;
 }
 
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
