--- a/savis4/Savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.scss
+++ b/savis4/Savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.scss
@@ -253,3 +253,13 @@ $slider-track-color: #bfbfbf;
     border: 1px  solid darken($slider-active-color, $amount: 15%)
   }
 }
+
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
