--- a/savis4/Savis4/src/app/features/two-means-ci/two-means-ci.component.scss
+++ b/savis4/Savis4/src/app/features/two-means-ci/two-means-ci.component.scss
@@ -122,3 +122,13 @@ $stat-block-width: calc(50% - 1rem);
     color: black;
   }
 }
+
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
