--- a/savis4/Savis4/src/app/features/two-means/two-means.component.html
+++ b/savis4/Savis4/src/app/features/two-means/two-means.component.html
@@ -169,4 +169,6 @@
     </div>
   </div>
 </div>
-<app-footer></app-footer>
+<footer class="static-footer">
+  {{ "nav_copyright" | translate }}
+</footer>
