--- a/savis4/Savis4/src/app/features/two-means/two-means.component.scss
+++ b/savis4/Savis4/src/app/features/two-means/two-means.component.scss
@@ -39,4 +39,15 @@
       cursor: not-allowed;
       color: #929292;
     }
-  }
+}
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
+
+  
