--- a/savis4/Savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/Savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -292,4 +292,6 @@
     </div>
   </div>
 </div>
-<app-footer></app-footer>
+<footer class="static-footer">
+  {{ "nav_copyright" | translate }}
+</footer>
