--- a/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.scss
+++ b/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.scss
@@ -6,4 +6,14 @@
     width: 100%;
     height:4px;
     background-color: green;
+}
+
+.static-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000; 
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0; 
   }
