Added language switch to navbar, edited some spanish translations

--- a/savis4/Savis4/src/app/components/navbar/navbar.component.html
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <div class="hidden w-full md:block md:w-auto">
         <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-navbar md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 justify-end">
           <li>
-            <!-- <app-language-switcher class="block py-2 px-3 text-gray-100 rounded -my-1 md:border-0 md:hover:text-green md:p-0 bg-navbar"></app-language-switcher> -->
+            <app-language-switcher class="block py-2 px-3 text-gray-100 rounded -my-1 md:border-0 md:hover:text-green md:p-0 bg-navbar"></app-language-switcher>
           </li>
           <li>
             <a routerLink="/homepage" class="block py-2 px-3 text-gray-100 rounded  md:border-0 md:hover:text-green md:p-0 bg-navbar">{{'nav_home' | translate }}</a>
