--- a/savis4/Savis4/src/app/components/homepage/homepage.component.scss
+++ b/savis4/Savis4/src/app/components/homepage/homepage.component.scss
@@ -43,7 +43,7 @@ nav {
 
 
 
-/*home, about, download, user manual, sign out*/
+/*language, home, about, download, user manual, sign out*/
 nav a {
     color:black;
     text-decoration: none;
