--- a/savis4/Savis4/src/app/components/navbar/navbar.component.html
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
             <a href="https://www.csus.edu/faculty/d/rdiaz/" target="_blank"  class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-green md:p-0 bg-navbar">{{ 'nav_download' | translate }}</a>
           </li>
           <li>
-            <a href="https://www.csus.edu/faculty/d/rdiaz/" target="_blank"  class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-green md:p-0 bg-navbar">{{ 'nav_user_manual' | translate }}</a>
+            <a routerLink="/user-manual" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-green md:p-0 bg-navbar">{{ 'nav_user_manual' | translate }}</a>
           </li>
           <li>
             <a class="block py-2 px-3 text-gray-100 rounded  md:border-0 md:hover:text-green md:p-0 bg-navbar cursor-pointer" (click)="signOut()">{{ 'nav_sign_out' | translate }}</a>
