--- a/savis4/Savis4/src/app/components/navbar/navbar.component.html
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.html
@@ -25,6 +25,7 @@
           </li>
         </ul>
       </div>
+      <img [src]="modeIcon" id="modeSwitch" class="modeSwitcher" title="Dark Mode" (click)="checkMode()"/>
     </div>
   </nav>
   
