--- a/savis4/Savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.html
+++ b/savis4/Savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.html
@@ -1,7 +1,12 @@
 <div>
     <div>
-      <div>
-        {{ 'lr_least_squares' | translate }}: {{ leastSquares }}
+      <div class="least-squares-badge">
+        <span class="least-squares-label">{{ 'lr_least_squares' | translate }}</span>
+        <span class="least-squares-value">{{ leastSquares | number:'1.2-2' }}</span>
+      </div>
+      <div class="regression-formula">
+        <span class="regression-formula-label">Regression Formula</span>
+        <span class="regression-formula-value">{{ regressionFormula }}</span>
       </div>
       <div>
         <canvas baseChart
