Dark Mode progress for advisor meeting

--- a/savis4/Savis4/src/app/components/homepage/homepage.component.html
+++ b/savis4/Savis4/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<div className="homeBox">
 <div class="box-container">
   <div class="column">
     <div class="tool1">{{ "homepage_Hypothesis_Testing" | translate }}</div>
@@ -53,3 +53,4 @@
 <footer class="static-footer">
   {{ "nav_copyright" | translate }}
 </footer>
+</div>
