--- a/savis4/Savis4/src/app/components/homepage/homepage.component.scss
+++ b/savis4/Savis4/src/app/components/homepage/homepage.component.scss
@@ -2,13 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
-@import url('../navbar/navbar.component.scss');
 
 :host {
     margin: 0;
     padding: 0;
     background-size: cover;
-    background-image: url(https://www.pbahealth.com/cdn/2021/09/shutterstock_430195417-1.png);
+    background-image: var(--homeBgImg);
     /* filter: blur(1px); */
     background-position: center 10%;
     background-repeat: no-repeat;
@@ -16,7 +15,6 @@
     flex-direction: column;
     min-height: 100vh;
 }
-
 
 /*SAVIS heading*/
 header {
@@ -29,18 +27,12 @@ header {
     font-size: 155%;
 }
 
-
-
-
 nav {
     display: flex;
     justify-content: space-around;
     /* background-color: rgba(255,255,255,0.7); */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
-
-
-
 
 /*language, home, about, download, user manual, sign out*/
 nav a {
@@ -51,9 +43,6 @@ nav a {
     font-family: 'DM Serif Display', serif;
     font-size: 170%;
 }
-
-
-
 
 /*home hover*/
 nav a:hover {
@@ -80,7 +69,7 @@ nav a:hover {
     width: 310px;
     padding: 2vh;
     margin: 1vh auto;
-    background-color: rgb(52, 144, 110);
+    background-color: var(--third-col);
     border-radius: 2px;
     font-family: 'Poppins', sans-serif;
     color: beige;
@@ -89,7 +78,7 @@ nav a:hover {
 
 /* Box hovering effects */
 .box:hover, .box2:hover, .box3:hover {
-    background-color: rgba(109, 147, 111, 0.7);
+    background-color: var(--fourth-col);
     cursor: pointer;
 }
 
@@ -103,7 +92,7 @@ nav a:hover {
 /* Tooltips styling */
 .tool1, .tool2, .tool3 {
     margin: 2em auto 1em;
-    color: black;
+    color: var(--second-col);
     text-align: center;
     font-family: 'Roboto Slab', serif;
     font-size: 1.5em;
