--- a/savis4/Savis4/src/app/features/bar-chart/bar-chart.component.scss
+++ b/savis4/Savis4/src/app/features/bar-chart/bar-chart.component.scss
@@ -1,5 +1,6 @@
 #bar-chart-tutorial {
   padding: 20px;
+  background-color:var(--fifth-col);
   
     form {
       margin-top: 0;
@@ -8,27 +9,34 @@
 
     h1 {
       font-weight: bold;
+      color:var(--second-col);
     }
 
     h3 {
       font-weight: bold;
+      color:var(--second-col);
     }
 
     h4 {
       margin-top: 3px;
+      color:var(--second-col);
     }
     .chart-area {
+      color:var(--second-col);
       display: flex;
       //flex-wrap: wrap;
       #control {
         width: 10%;
       }
       #view {
+        background-color: var(--eighth-col);
+        border-radius: 10px;
         margin-left: 50px;
         width: 60%;
         justify-content: center;
       }
       #result{
+        color:var(--second-col);
         text-align: center;
         width: 25%;
         justify-content: center;
@@ -43,7 +51,7 @@
         }
         th, td{
           padding: 5px;
-          border: 1px solid #000;
+          border: 1px solid var(--second-col);
         }
       }
       label {
@@ -60,6 +68,7 @@
       margin: 5px;
     }
     .text-display{
+      color:var(--second-col);
       text-align: center;
       margin: 5px;
     }
@@ -69,24 +78,28 @@
       color: red;
     }
     textarea{
-      border: 2px solid gray;
+      background-color: var(--fifth-col);
+      border: 2px solid var(--ninth-col);
+      color:var(--second-col);
       margin: 2px;
       width: 100%;
       border-radius: 5px;
       resize: none;
     }
     select{
-      border: 1px solid gray;
+      background-color: var(--fifth-col);
+      border: 2px solid var(--ninth-col);
+      color:var(--second-col);
       width: 100%;
       height: 30px;
       border-radius: 5px;
     }
 }
 
-$primary-color: #5ebe5e;
-$secondary-color: #93cb52;
-$slider-active-color: #bfbfbf;
-$slider-track-color: #bfbfbf;
+$primary-color: var(--seventh-col);
+$secondary-color: #5ebe5e;
+$slider-active-color: var(--ninth-col);
+$slider-track-color: var(--ninth-col);;
 
 button {
   background: linear-gradient(180deg, lighten($secondary-color, 5%), $secondary-color);
@@ -102,14 +115,16 @@ button {
   }
 
   &:disabled {
-    background: #bfbfbf;
+    background: var(--ninth-col);
     cursor: not-allowed;
   }
 }
 
 input[type="number"] {
   margin: 2px;
-  border: 1px solid $slider-active-color;
+  background-color: var(--fifth-col);
+  border: 2px solid var(--ninth-col);
+  color:var(--second-col);
   border-radius: 4px;
   padding: 10px;
   font-size: 1rem;
