--- a/savis4/Savis4/src/styles.scss
+++ b/savis4/Savis4/src/styles.scss
@@ -2,3 +2,28 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+:root{
+    --homeBgImg: url(https://www.pbahealth.com/cdn/2021/09/shutterstock_430195417-1.png);
+    --first-col:white;
+    --second-col:black; //text color
+    --third-col:rgb(52, 144, 110); //home box color
+    --fourth-col:rgba(109, 147, 111, 0.7); //home box hover color
+    --fifth-col:rgb(250,250,250); //background col
+    --sixth-col:gray; //input box col
+    --seventh-col:#5ebe5e;//graph input button (PRIMARY)
+    --eighth-col: rgb(250,250,250);
+    --ninth-col:#bfbfbf; //run simulation button (active/tracker color)
+}
+.darkMode{
+    --homeBgImg: url(./assets/darkMode_bg.png);
+    --first-col: black;
+    --second-col:white; //text color
+    --third-col: rgb(109, 147, 111); //home box color
+    --fourth-col:rgba(52, 144, 110,0.7); //home box hover color
+    --fifth-col:rgb(62,62,66); //background col
+    --sixth-col: rgb(250,250,250);
+    --seventh-col:#93cb52;//graph input button (PRIMARY)
+    --eighth-col: rgb(230,230,230);
+    --ninth-col:rgb(45,45,48); //run simulation button (active/tracker color)
+}
