--- a/savis4/Savis4/src/app/components/navbar/navbar.component.scss
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.scss
@@ -6,3 +6,86 @@
     position: fixed;
     cursor:pointer;
 }
+
+/* Calculator container */
+.calculator-container {
+    position: fixed;
+    top: 80px;
+    right: 20px;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Switch styles */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    vertical-align: middle;
+}
+
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: #93cb52;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #93cb52;
+}
+
+input:checked + .slider:before {
+    transform: translateX(20px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 20px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* Label styles */
+.switch + span, span + .switch {
+    vertical-align: middle;
+    margin: 5px;
+}
+
+span {
+    color: white;
+    border: none;
+    box-shadow: none;
+    margin-left: 2px;
+    font-size: 12px;
+}
