#102 JIRA/ Master merged to update calculator files

--- a/savis4/Savis4/src/app/components/navbar/navbar.component.html
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <a routerLink="/about" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_about' | translate }}</a>
           </li>
           <li>
-            <a href="https://www.csus.edu/faculty/d/rdiaz/" target="_blank"  class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_download' | translate }}</a>
+            <a routerLink="/download-page" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_download' | translate }}</a>
           </li>
           <li>
             <a routerLink="/user-manual" class="block py-2 px-3 text-gray-100 md:border-0 md:hover:text-newGreen md:p-0 bg-navbar">{{ 'nav_user_manual' | translate }}</a>
