#100 JIRA/ Fix footer in about page

--- a/savis4/Savis4/src/app/components/about/about.component.html
+++ b/savis4/Savis4/src/app/components/about/about.component.html
@@ -114,4 +114,6 @@
 
 
 </body>
-<app-footer class="w-full"></app-footer>
+<footer class="static-footer">
+    {{ "nav_copyright" | translate }}
+</footer>
