--- a/savis4/Savis4/src/app/components/navbar/navbar.component.scss
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.scss
@@ -7,6 +7,13 @@
     cursor:pointer;
 }
 
+.calcSwitcher {
+    position: fixed;
+    cursor:pointer;
+    width: 3%;
+    top: 80px;
+}
+
 /* Calculator container */
 .calculator-container {
     position: fixed;
