--- a/savis4/Savis4/src/app/components/calculator/calculator.component.html
+++ b/savis4/Savis4/src/app/components/calculator/calculator.component.html
@@ -4,30 +4,18 @@
     shadow-xl
     text-gray-800
     relative
-    overflow-hidden" id="draggable" draggable="true" style="max-width: 700px">
+    overflow-hidden" style="max-width: 350px">
 
     <h1 class="text-center text-white py-2 text-3xl font-bold invisible">Calculator For Savis4</h1>
 
-    <!--Calculator screen: scientific mode-->
-        <!--TBD-->
 
-    <!--Calculator screen: non-scientific mode-->
+    <!--caclulator screen-->
         <div class="w-full
+            h-20
             bg-gradient-to-b
             from-gray-800
             to-gray-700
             text-right">
-
-            <!--Scientific Button-->
-            <button class = "w-full
-            text-white
-            font-light
-            text-left
-            px-3
-            py-3"
-            (click)="toggleAdvancedMode()">
-            {{toggleAdvancedMode()}}
-            </button>
 
             <!--Number screen-->
             <div class="w-full
@@ -42,7 +30,7 @@
         <!--End of caclulator screen-->
 
 
-        <!--calculator button area-->
+        <!--caclulator button area-->
         <div class="w-full bg-gradient-to-b from-green-500 to-green-800">
 
                 <!--First button row-->
