--- a/savis4/Savis4/src/app/components/navbar/navbar.component.html
+++ b/savis4/Savis4/src/app/components/navbar/navbar.component.html
@@ -23,14 +23,17 @@
           <li>
             <a class="block py-2 px-3 text-gray-100 rounded  md:border-0 md:hover:text-newGreen md:p-0 bg-navbar cursor-pointer" (click)="isAuth ? signOut() : continueAsGuest()">{{ isAuth ? ('nav_sign_out' | translate) : ('nav_sign_in' | translate) }}</a>
           </li>
+
+          <!---Toggle Switch for Cacluator-->
           <li>
+            <label class="switch">
+              <input type="checkbox" [(ngModel)]="showCalculator">
+              <span class="slider round"></span>
+            </label>
             <span class="ml-2 text-gray-100">{{ showCalculator ? ('calc_switch' | translate) : ('calc_switch' | translate) }}</span>            
           </li>
         </ul>
       </div>
-      <!---Toggle Calculator Mode Button-->
-      <img [src]="calculatorMode" class="calcSwitcher" id="calcSwitch" title="Calculator Enabled" (click)="checkCalculatorMode()"/>
-      <!--Toggle Dark Mode Switch Button-->
       <img [src]="modeIcon" id="modeSwitch" class="modeSwitcher" title="Dark Mode" (click)="checkMode()"/>
     </div>
     <!---Caclulator Container-->
