Revert "Merge branch 'master' of https://github.com/syv0n/SAVIS4"
This reverts commit b0685dacad50154f3eca51059c6f3e7e2b1f1a5f, reversing
changes made to 7dac77fd6ca8bd3d6df38e79656fb5fd91ab557c.

--- a/savis4/Savis4/src/app/components/about/about.component.html
+++ b/savis4/Savis4/src/app/components/about/about.component.html
@@ -114,6 +114,4 @@
 
 
 </body>
-<footer class="static-footer">
-    {{ "nav_copyright" | translate }}
-</footer>
+<app-footer class="w-full"></app-footer>
