--- a/savis4/Savis4/src/app/user-manual/user-manual.component.scss
+++ b/savis4/Savis4/src/app/user-manual/user-manual.component.scss
@@ -1,9 +1,64 @@
-.static-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #000000; 
-    color: #ffffff;
+.user-manual-container {
+  padding: 40px;
+  background-color: white;
+
+  .title {
     text-align: center;
-    padding: 10px 0; 
+    font-size: 2.5rem;
+    margin-bottom: 30px;
   }
+
+  .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+
+    .text-section {
+      flex: 0.6;
+
+      h2, h3 {
+        margin: 0;
+        padding-bottom: 10px;
+      }
+
+      .green-box {
+        background-color: #e1f3dc;
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        font-size: 1.5rem;
+        line-height: 1.6;
+      }
+    }
+
+    .image-section {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: flex-end;
+      margin-top: 18px;
+      flex: 1;
+      transform: translateX(-150px);
+
+      .screenshot {
+        width: 900px;
+        max-width: none;
+        height: auto;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        margin-left: auto;
+      }
+    }
+  }
+}
+
+.static-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000; 
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0; 
+}
